# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased] - 2025-xx-xx

### Fixed
- Not generate correctly new date when create one model

### Added
- If you share your location and when the poll closes, you'll receive a summary of your movements.


## [1.0.0] - 2025-07-20